fix popup z-index and alt attributes

--- a/submissions/nrushchak/popup/index.css
+++ b/submissions/nrushchak/popup/index.css
@@ -12,8 +12,7 @@ a {
 
 .wrapper {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
+  padding: 0;
 }
 
 .header,
@@ -27,14 +26,16 @@ a {
 
 .header {
   box-shadow: 0 5px 10px -5px gray;
+  position: relative;
+  z-index: 1;
 }
 
 .footer {
   box-shadow: 0 -1px 10px 1px gray;
-}
-
-.main {
-  flex: 1 0 auto;
+  position:fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
 }
 
 .header__nav__list {
@@ -113,8 +114,8 @@ a {
 .popup {
   position: absolute;
   width: 300px;
-  height: 440px;
-  top: 90px;
+  height: 435px;
+  top: 80px;
   right: 10px;
   margin-left: auto;
   border: 1px solid rgb(211, 210, 210);
@@ -123,16 +124,17 @@ a {
 
   display: none;
   overflow: auto;
+  background-color: white;
 }
 
 .arrow {
   width: 30px;
   height: 30px;
-  top: 75px;
-  right: 120px;
+  top: 65px;
+  right: 140px;
   transform: rotate(45deg);
   background-color: white;
-  z-index: 1000;
+  z-index: 3;
   position: fixed;
   border-top: 1px solid lightgrey;
   border-left: 1px solid lightgrey;
@@ -194,7 +196,7 @@ a {
 
 .more__checkbox__label {
   width: 100%;
-  height: 40px;
+  height: 34px;
   background-color: lightgrey;
   display: flex;
   justify-content: center;
